# CG_Project

./: .gitignore  CMakeLists.txt  Descriptors.hpp  MyProject.cpp  MyProject.hpp  README.md  SDL2Music.cpp  SDL2Music.h  SDL2SoundEffects.cpp  SDL2SoundEffects.h  Starter.sln  Starter.vcxproj
materials/: cube_With_Material.mtl
models/: 3dmountains.mtl  Venus.mtl  museo_prof.blend  museo_prof.blend1  museo_prof.mtl  museo_prof_remake.mtl
models/Old/: Venus.mtl  flamingo.mtl  museo_prof.blend  museo_prof.mtl  stand.mtl
shaders/: CardFrag.spv  CardVert.spv  MarbleFrag.spv  SkyBoxShader.vert  SkyBoxVert.spv  compile.bat  frag.spv  shader.frag  shader.vert  shaderCard.frag  shaderCard.vert  shaderMarble.frag  shaderMarble.vert  vert.spv
